# Ventus

./: .gitignore  PRIVACY_POLICY.md  README.md  TERMS_OF_SERVICE.md
app/: .gitignore  pubspec.yaml
app/amplify/.config/: project-config.json
app/amplify/backend/: backend-config.json
app/amplify/backend/api/: APIGatewayAuthStack.json
app/amplify/backend/api/ventusapi/: cli-inputs.json
app/amplify/backend/auth/ventusf074c077/: cli-inputs.json
app/amplify/backend/function/verifyPhoto/: function-parameters.json  verifyPhoto-cloudformation-template.json
app/amplify/backend/storage/ventusPhotos/: cli-inputs.json
app/amplify/backend/types/: amplify-dependent-resources-ref.d.ts
app/android/: gradle.properties
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: amplifyconfiguration.dart  main.dart
app/lib/core/constants/: app_theme.dart
app/lib/core/providers/: notification_settings_provider.dart
app/lib/core/routing/: app_router.dart
app/lib/core/services/: alarm_scheduler_service.dart  alarm_trigger_service.dart  amplify_service.dart  notification_service.dart  notification_settings_service.dart  permission_service.dart  photo_verification_service.dart  storage_service.dart
app/lib/features/alarm/models/: alarm.dart  alarm.g.dart
app/lib/features/alarm/providers/: alarm_provider.dart
app/lib/features/alarm/screens/: add_alarm_screen.dart  alarm_list_screen.dart  edit_alarm_screen.dart
app/lib/features/auth/providers/: auth_provider.dart
app/lib/features/auth/screens/: forgot_password_screen.dart  help_screen.dart  login_screen.dart  profile_screen.dart  reset_password_screen.dart  settings_screen.dart  signup_screen.dart  splash_screen.dart  verify_email_screen.dart
app/lib/features/camera/screens/: camera_capture_screen.dart
app/lib/features/camera/services/: camera_service.dart
app/lib/features/streak/models/: streak_entry.dart  streak_entry.g.dart
app/lib/features/streak/providers/: streak_provider.dart
app/lib/features/streak/screens/: day_detail_screen.dart  stats_screen.dart
app/lib/features/streak/services/: streak_service.dart
app/lib/shared/widgets/: sun_loading_spinner.dart
app/macos/Flutter/: GeneratedPluginRegistrant.swift
app/test/: widget_test.dart
app/windows/flutter/: generated_plugins.cmake
engine/: .gitignore  CMakeLists.txt  README.md
engine/include/: inference_engine.h  preprocessing.h  scene_classifier.h
engine/proto/: verification.proto
engine/src/: inference_engine.cpp  preprocessing.cpp  scene_classifier.cpp  server.cpp
engine/tests/: test_classifier.cpp  test_preprocessing.cpp
(+5 files in other folders)
